changing cofig files

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,16 +22,16 @@
                             <nav >
                                 <div class="row">
                                     <div class="col-35">
-                                        <img class="wfp-logo" src="static/static_figures/combined_logo.png" alt="tz_wfp-logo">
+                                        <img class="wfp-logo" src="static/static_figures/combined_logo.png" alt="tz_wfp-logo" style="width: 200px;>
+                                        <hr style="border-color: #ccc; margin: 10px 0;">
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="row">
-                                    <h2>Nationwide Mills Census in Tanzania</h2>
-                                         <p> The World Food Programme (WFP) in Tanzania has funded OpenMap Development Tanzania (OMDTZ) to conduct a detailed mapping survey of mills across Tanzania and collect information about mills such as locations, distribution, capacity, fortifications, commodities milled by specific machines and other relevant information.
-                                             OMDTZ employed a community mapping approach by training community members of specific regions and districts to collect the above information, whereas over 1,000 community mappers were trained and collected more than 50,000 mills across the country.
-                                             This assignment was meant to create up-to-date and reliable data for thousands of small & medium scale mills as many Tanzanian households depend on every day for their maize meal forming 40% of household calories on average. The available data before the mapping was scattered across different wards and is infrequently updated. This information will help WFP and the associated partners such as the government of Tanzania to understand the assessment of nutrition and food security within the country and be able to create relative intervention as needed.
-                                             This map is interactive and will be updated over time to keep the information relevant and reliable.
+                                    <h2>Interactive web map: synchronizing data from ODK central</h2>
+                                         <p> Initially developed for a nationwide data collection project in Tanzania, this web map has demonstrated its effectiveness in handling large amounts of data. Enabled by an API connection to ODK central, the web map facilitates real-time data visualization and analysis, ensuring users always have access to the latest information. Its robust data handling capabilities are evident in its ability to successfully visualize over 55,000 mill machines and more than 17,000 primary schools data points across Tanzania.
+                                             Furthermore, the web map features dynamic graphs that adapt to the data displayed, providing real-time insights into data trends, patterns, and anomalies, enhancing data comprehension. These interactive graphs allow users to interact with them as the web map filters, selecting items that immediately reflect the selection on the map. Only data points that fit the specified criteria will appear.
+
                                         </p>
                                     </div>
                                     <hr>
